UI toolkit > Links page: refactored layout to fix alignment issues and styled links with minicons list. #117.

--- a/assets/css/design-manual.css
+++ b/assets/css/design-manual.css
@@ -3851,9 +3851,11 @@ UI toolkit repo list
 }
 /* UI toolkit/Links page
    ========================================================================== */
-a.link-minicon i {
-  text-decoration: none;
-  margin-left: .5em;
+ul.list_links-minicons {
+  list-style: none;
+}
+ul.list_links-minicons li {
+  margin: .5em 0;
 }
 /* UI toolkit/Forms page
    ========================================================================== */
