--- a/front/src/less/design-manual/content.less
+++ b/front/src/less/design-manual/content.less
@@ -608,14 +608,15 @@ UI toolkit repo list
 
 /* UI toolkit/Links page
    ========================================================================== */
-a {
-  &.link-minicon {
-    i { 
-      text-decoration: none;
-      margin-left: .5em;
+ul {
+  &.list_links-minicons {
+    list-style: none;
+    li {
+      margin: .5em 0;
     }
   }
 }
+
 
 /* UI toolkit/Forms page
    ========================================================================== */
